[tool.poetry]
name = "netbox-dns-easy"
version = "0.1.0"
description = "Easy DNS management in Netbox"
authors = ["Daniel Chiquito <daniel.chiquito@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "netbox_dns_easy"}]

[tool.poetry.dependencies]
python = "^3.10"
netbox-plugin-dns = "^1.1.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
